--- a/index22ac.html
+++ b/index22ac.html
@@ -241,7 +241,7 @@
 							<p class="title">Nombre:</p>
 							<p class="datos">MAXIMO NAJERA MEDINA</p>
 							<p class="title">Matrícula:</p>
-							<p class="datos">09DEX0001S</p>
+							<p class="datos">N2547K06938</p>
 							</div>
 							<p> <b>Datos del plantel o servicio educativo</b> </p>
 							<div class="col-8 text-center mt-1">
